[project]
name = "complex-analysis-toolkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Gchauhan123",email = "gchauh1@lsu.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sympy (>=1.14.0,<2.0.0)",
    "mpmath (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

